--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,8 @@
         name="viewport"
         content="width=device-width, initial-scale=1, shrink-to-fit=no"
       />
+      <!-- custom css -->
+      <link rel="stylesheet" href="/static/css/auth.css" />
 
       <!-- Bootstrap CSS -->
       <link
@@ -22,6 +24,61 @@
     <title>Login to Quiz Master</title>
   </head>
   <body>
+    <section
+      class="d-flex flex-column vh-100 justify-content-center align-items-center"
+    >
+      <img alt="logo" src="/static/images/logo.png" class="logo" />
+
+      <!-- Flash messages -->
+      {% with messages = get_flashed_messages(with_categories=True) %} {% if
+      messages %}
+      <div class="container w-50">
+        {% for category, message in messages %}
+        <div
+          class="alert alert-{{ category }} alert-dismissible fade show"
+          role="alert"
+        >
+          {{ message }}
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        {% endfor %}
+      </div>
+      {% endif %} {% endwith %}
+
+      <!-- login form -->
+      <form method="post" action="/auth/login">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input
+            type="email"
+            name="email"
+            class="form-control"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+            placeholder="Enter email"
+          />
+          <small id="emailHelp" class="form-text text-muted"
+            >We'll never share your email with anyone else.</small
+          >
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            id="exampleInputPassword1"
+            name="password"
+            placeholder="Password"
+          />
+        </div>
+        <button type="submit" class="w-100 btn btn-primary">Submit</button>
+      </form>
+    </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
