--- a/templates/login.html
+++ b/templates/login.html
@@ -25,14 +25,14 @@
   </head>
   <body>
     <section
-      class="d-flex flex-column vh-100 justify-content-center align-items-center"
+      class="d-flex flex-column min-vh-100 justify-content-center align-items-center"
     >
       <img alt="logo" src="/static/images/logo.png" class="logo" />
 
       <!-- Flash messages -->
       {% with messages = get_flashed_messages(with_categories=True) %} {% if
       messages %}
-      <div class="container w-50">
+      <div class="container w-100 w-sm-50 w-md-25">
         {% for category, message in messages %}
         <div
           class="alert alert-{{ category }} alert-dismissible fade show"
@@ -51,7 +51,11 @@
       {% endif %} {% endwith %}
 
       <!-- login form -->
-      <form method="post" action="/auth/login">
+      <form
+        method="post"
+        class="w-100 w-md-75 w-lg-50 p-3"
+        action="/auth/login"
+      >
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input
@@ -89,6 +93,11 @@
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
     <script
