--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,14 +25,14 @@
   </head>
   <body>
     <section
-      class="d-flex flex-column vh-100 justify-content-center align-items-center"
+      class="d-flex flex-column min-vh-100 justify-content-center align-items-center"
     >
       <img alt="logo" src="/static/images/logo.png" class="logo" />
 
       <!-- Flash messages -->
       {% with messages = get_flashed_messages(with_categories=True) %} {% if
       messages %}
-      <div class="container w-50">
+      <div class="container w-100 w-sm-50">
         {% for category, message in messages %}
         <div
           class="alert alert-{{ category }} alert-dismissible fade show"
@@ -51,10 +51,14 @@
       {% endif %} {% endwith %}
 
       <!-- signup form -->
-      <form method="post" action="/auth/signup">
+      <form
+        method="post"
+        class="w-100 w-md-75 w-lg-50 p-3"
+        action="/auth/signup"
+      >
         <div class="container">
           <div class="row">
-            <div class="form-group col">
+            <div class="form-group col-sm">
               <label for="exampleInputName">Full Name</label>
               <input
                 type="text"
@@ -65,7 +69,7 @@
                 placeholder="Enter Full Name"
               />
             </div>
-            <div class="form-group col">
+            <div class="form-group col-sm">
               <label for="exampleInputEmail1">Email address</label>
               <input
                 type="email"
@@ -81,7 +85,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="form-group col">
+            <div class="form-group col-sm">
               <label for="exampleInputPassword1">Password</label>
               <input
                 type="password"
@@ -91,7 +95,7 @@
                 placeholder="Password"
               />
             </div>
-            <div class="form-group col">
+            <div class="form-group col-sm">
               <label for="exampleInputQualification">Qualification</label>
               <input
                 type="text"
@@ -104,7 +108,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="form-group col">
+            <div class="form-group col-sm">
               <label for="exampleInputDOB">Date of birth</label>
               <input
                 type="date"
@@ -115,7 +119,7 @@
                 placeholder="Enter Date of birth"
               />
             </div>
-            <div class="col form-group">
+            <div class="col-sm form-group">
               <label for="exampleInputDOB">Submit</label>
               <button type="submit" class="w-100 btn btn-primary">
                 Submit
@@ -135,6 +139,11 @@
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
     <script
