--- a/templates/login.html
+++ b/templates/login.html
@@ -32,55 +32,63 @@
       <!-- Flash messages -->
       {% with messages = get_flashed_messages(with_categories=True) %} {% if
       messages %}
-      <div class="container w-100 w-sm-50 w-md-25">
-        {% for category, message in messages %}
-        <div
-          class="alert alert-{{ category }} alert-dismissible fade show"
-          role="alert"
-        >
-          {{ message }}
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
-            aria-label="Close"
-          ></button>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-12 col-sm-6">
+            {% for category, message in messages %}
+            <div
+              class="alert alert-{{ category }} alert-dismissible fade show"
+              role="alert"
+            >
+              {{ message }}
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"
+              ></button>
+            </div>
+            {% endfor %}
+          </div>
         </div>
-        {% endfor %}
       </div>
       {% endif %} {% endwith %}
 
       <!-- login form -->
-      <form
-        method="post"
-        class="w-100 w-md-75 w-lg-50 p-3"
-        action="/auth/login"
-      >
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input
-            type="email"
-            name="email"
-            class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-            placeholder="Enter email"
-          />
-          <small id="emailHelp" class="form-text text-muted"
-            >We'll never share your email with anyone else.</small
-          >
+      <form method="post" class="container p-3" action="/auth/login">
+        <div class="row">
+          <div class="form-group mx-auto col-12 col-sm-6">
+            <label for="exampleInputEmail1">Email address</label>
+            <input
+              type="email"
+              name="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Enter email"
+            />
+            <small id="emailHelp" class="form-text text-muted"
+              >We'll never share your email with anyone else.</small
+            >
+          </div>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-            name="password"
-            placeholder="Password"
-          />
+        <div class="row">
+          <div class="form-group mx-auto col-12 col-sm-6">
+            <label for="exampleInputPassword1">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              name="password"
+              placeholder="Password"
+            />
+          </div>
         </div>
-        <button type="submit" class="w-100 btn btn-primary">Submit</button>
+        <div class="row">
+          <div class="form-group mx-auto col-12 col-sm-6">
+            <button type="submit" class="w-100 btn btn-primary">Submit</button>
+          </div>
+        </div>
       </form>
     </section>
     <!-- Optional JavaScript -->
