--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -1,4 +1,19 @@
 .logo {
   width: 150px;
   margin: 25px auto;
+  background-color: white !important;
+  border-radius: 12px;
+  padding: 6px;
+}
+
+body {
+  background-color: #1f1147 !important;
+  color: white !important;
+  background: url("./bg.svg") no-repeat center bottom;
+  background-size: cover;
+  height: 320px; /* Set the height of the section */
+}
+
+.button {
+  background-color: #6949fd !important;
 }
