--- a/templates/login.html
+++ b/templates/login.html
@@ -86,7 +86,9 @@
         </div>
         <div class="row">
           <div class="form-group mx-auto col-12 col-sm-6">
-            <button type="submit" class="w-100 btn btn-primary">Submit</button>
+            <button type="submit" class="w-100 button btn btn-primary">
+              Submit
+            </button>
           </div>
         </div>
       </form>
