--- a/templates/signup.html
+++ b/templates/signup.html
@@ -121,7 +121,7 @@
             </div>
             <div class="form-group mx-auto col-12 col-sm-6">
               <label for="exampleInputDOB">Submit</label>
-              <button type="submit" class="w-100 btn btn-primary">
+              <button type="submit" class="button w-100 btn btn-primary">
                 Submit
               </button>
             </div>
