--- a/templates/login.html
+++ b/templates/login.html
@@ -89,6 +89,10 @@
             <button type="submit" class="w-100 button btn btn-primary">
               Submit
             </button>
+            <small id="emailHelp" class="form-text text-muted"
+              >Don't have an Account?
+              <a href="/auth/signup">Create now</a></small
+            >
           </div>
         </div>
       </form>
