--- a/templates/signup.html
+++ b/templates/signup.html
@@ -124,6 +124,10 @@
               <button type="submit" class="button w-100 btn btn-primary">
                 Submit
               </button>
+              <small id="emailHelp" class="form-text text-muted"
+                >Already have an Account?
+                <a href="/auth/login">Login now</a></small
+              >
             </div>
           </div>
         </div>
