--- a/templates/login.html
+++ b/templates/login.html
@@ -1,123 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <head>
-      <!-- Required meta tags -->
-      <meta charset="utf-8" />
-      <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no"
-      />
-      <!-- custom css -->
-      <link rel="stylesheet" href="/static/css/auth.css" />
+{% extends "base.html" %} {% block title %}Login to Quiz Time{% endblock %} {%
+block content %}
+<section
+  id="body"
+  class="d-flex flex-column min-vh-100 justify-content-center align-items-center"
+>
+  <img alt="logo" src="/static/images/logo.png" class="logo" />
 
-      <!-- Bootstrap CSS -->
-      <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous"
-      />
-    </head>
-    <title>Login to Quiz Master</title>
-  </head>
-  <body>
-    <section
-      class="d-flex flex-column min-vh-100 justify-content-center align-items-center"
-    >
-      <img alt="logo" src="/static/images/logo.png" class="logo" />
-
-      <!-- Flash messages -->
-      {% with messages = get_flashed_messages(with_categories=True) %} {% if
-      messages %}
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-12 col-sm-6">
-            {% for category, message in messages %}
-            <div
-              class="alert alert-{{ category }} alert-dismissible fade show"
-              role="alert"
-            >
-              {{ message }}
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="alert"
-                aria-label="Close"
-              ></button>
-            </div>
-            {% endfor %}
-          </div>
+  <!-- Flash messages -->
+  {% with messages = get_flashed_messages(with_categories=True) %} {% if
+  messages %}
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-6">
+        {% for category, message in messages %}
+        <div
+          class="alert alert-{{ category }} alert-dismissible fade show"
+          role="alert"
+        >
+          {{ message }}
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
         </div>
+        {% endfor %}
       </div>
-      {% endif %} {% endwith %}
+    </div>
+  </div>
+  {% endif %} {% endwith %}
 
-      <!-- login form -->
-      <form method="post" class="container p-3" action="/auth/login">
-        <div class="row">
-          <div class="form-group mx-auto col-12 col-sm-6">
-            <label for="exampleInputEmail1">Email address</label>
-            <input
-              type="email"
-              name="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              placeholder="Enter email"
-            />
-            <small id="emailHelp" class="form-text text-muted"
-              >We'll never share your email with anyone else.</small
-            >
-          </div>
-        </div>
-        <div class="row">
-          <div class="form-group mx-auto col-12 col-sm-6">
-            <label for="exampleInputPassword1">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-              name="password"
-              placeholder="Password"
-            />
-          </div>
-        </div>
-        <div class="row">
-          <div class="form-group mx-auto col-12 col-sm-6">
-            <button type="submit" class="w-100 button btn btn-primary">
-              Submit
-            </button>
-            <small id="emailHelp" class="form-text text-muted"
-              >Don't have an Account?
-              <a href="/auth/signup">Create now</a></small
-            >
-          </div>
-        </div>
-      </form>
-    </section>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+  <!-- login form -->
+  <form method="post" class="container p-3" action="/auth/login">
+    <div class="row">
+      <div class="form-group mx-auto col-12 col-sm-6">
+        <label for="exampleInputEmail1">Email address</label>
+        <input
+          type="email"
+          name="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          aria-describedby="emailHelp"
+          placeholder="Enter email"
+        />
+        <small id="emailHelp" class="form-text text-muted"
+          >We'll never share your email with anyone else.</small
+        >
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group mx-auto col-12 col-sm-6">
+        <label for="exampleInputPassword1">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="exampleInputPassword1"
+          name="password"
+          placeholder="Password"
+        />
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group mx-auto col-12 col-sm-6">
+        <button type="submit" class="w-100 button btn btn-primary">
+          Submit
+        </button>
+        <small id="emailHelp" class="form-text text-muted"
+          >Don't have an Account? <a href="/auth/signup">Create now</a></small
+        >
+      </div>
+    </div>
+  </form>
+</section>
+{% endblock %}
