--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,10 +25,10 @@ content %}
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Quizzes</a>
+        <a class="nav-link" href="/admin_quiz">Quizzes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Subjects</a>
+        <a class="nav-link" href="/admin_subject">Subjects</a>
       </li>
 
       <li class="nav-item">
