--- a/templates/admin_quiz.html
+++ b/templates/admin_quiz.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}Quiz Management{% endblock %} {%
-block content %}
+block content %} {% include "admin_wrapper.html" %}
 <section>
   <h1>Manage Quiz here</h1>
 </section>
