--- a/templates/admin_subject.html
+++ b/templates/admin_subject.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block title %}Subject Management{% endblock %} {%
-block content %}
+block content %} {% include "admin_wrapper.html" %}
 <section>
   <h1>Manage Subjects here</h1>
 </section>
