--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,49 +1,6 @@
 {% extends "base.html" %} {% block title %}Admin Panel{% endblock %} {% block
-content %}
-<!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a href="/">
-    <img
-      alt="logo"
-      src="/static/images/logo.png"
-      class="adminLogo navbar-brand"
-    />
-  </a>
-  <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
-    <span class="navbar-toggler-icon"></span>
-  </button>
+content %} {% include "admin_wrapper.html" %}
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/admin_quiz">Quizzes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin_subject">Subjects</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input
-        class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-dark my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+<!-- The rest of your admin page content goes here -->
+<h1>Welcome to the Admin Panel</h1>
 {% endblock %}
