--- a/templates/user.html
+++ b/templates/user.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %} {% block title %}User Page{% endblock %} {% block
 content %}
-<section></section>
-{% endblock %} {% endblock %}
+<section>
+  <h1>user page</h1>
+</section>
+{% endblock %}
