--- a/templates/admin_wrapper.html
+++ b/templates/admin_wrapper.html
@@ -23,24 +23,19 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/admin/quiz">Quizzes</a>
+        <a class="anchor nav-link" href="/admin/quiz">Quizzes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/admin/subject">Subjects</a>
+        <a
+          class="anchor nav-link"
+          href="/admin/subject?skip=0&take=25&order=created_at&where={}"
+          >Subjects</a
+        >
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="anchor nav-link" href="/auth/logout">Logout</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input
-        class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-dark my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
