--- a/templates/login.html
+++ b/templates/login.html
@@ -67,7 +67,7 @@ block content %}
           Submit
         </button>
         <small id="emailHelp" class="form-text text-muted"
-          >Don't have an Account? <a href="/auth/signup">Create now</a></small
+          >Don't have an Account? <a class="anchor" href="/auth/signup">Create now</a></small
         >
       </div>
     </div>
