--- a/templates/signup.html
+++ b/templates/signup.html
@@ -103,7 +103,7 @@ block content %}
             Submit
           </button>
           <small id="emailHelp" class="form-text text-muted"
-            >Already have an Account? <a href="/auth/login">Login now</a></small
+            >Already have an Account? <a class="anchor" href="/auth/login">Login now</a></small
           >
         </div>
       </div>
