--- a/templates/admin/admin_single_chapter.html
+++ b/templates/admin/admin_single_chapter.html
@@ -17,71 +17,166 @@ content %}{% include "admin/admin_wrapper.html" %}
       </li>
     </ol>
   </nav>
-  <div class="border p-3">
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Subject Name:</strong> {% if sub %}{{ sub.name }}{% else %}N/a{%
-        endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Subject Description:</strong> {% if sub %}{{ sub.description
-        }}{% else %}N/a{% endif %}
-      </p>
-    </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Subject Code:</strong> {% if sub %}{{ sub.code }}{% else %}N/a{%
-        endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at }}{%
-        else %}N/a{% endif %}
-      </p>
-    </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{% else
-        %}N/a{% endif %}
-      </p>
+
+  <div
+    class="modal fade"
+    id="exampleModalScrollable"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalScrollableTitle"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalScrollableTitle">
+            Subject & Chapter Details
+          </h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <h6>Subject Details</h6>
+          <div class="border p-3">
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Subject Name:</strong> {% if sub %}{{ sub.name }}{% else
+                %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Subject Description:</strong> {% if sub %}{{
+                sub.description }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Subject Code:</strong> {% if sub %}{{ sub.code }}{% else
+                %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at
+                }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{%
+                else %}N/a{% endif %}
+              </p>
+            </div>
+          </div>
+          <h6 class="mt-2">Chapter Details</h6>
+          <div class="border mt-3 p-3">
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Chapter Name:</strong> {% if chap %}{{ chap.name }}{%
+                else %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Chapter Description:</strong> {% if chap %}{{
+                chap.description }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Chapter Code:</strong> {% if chap %}{{ chap.code }}{%
+                else %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Number of Pages:</strong> {% if chap %}{{ chap.pages
+                }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Chapter Number:</strong> {% if chap %}{{
+                chap.chapter_number }}{% else %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Last Updated At:</strong> {% if chap %}{{
+                chap.updated_at }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Created At:</strong> {% if chap %}{{ chap.created_at
+                }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="border mt-3 p-3">
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Chapter Name:</strong> {% if chap %}{{ chap.name }}{% else
-        %}N/a{% endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Chapter Description:</strong> {% if chap %}{{ chap.description
-        }}{% else %}N/a{% endif %}
-      </p>
+
+  <div class="d-flex mt-3 flex-wrap justify-content-between">
+    <div>
+      <h3>Quiz Management</h3>
+      <div class="d-flex align-items-center">
+        <p class="mr-4">Total Rows: {{ total_rows }}</p>
+        <p>
+          Current Page: {% if skip and take %} {{ ((skip|int)//take)+1 }} {%
+          else %}1{% endif %}
+        </p>
+      </div>
     </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Chapter Code:</strong> {% if chap %}{{ chap.code }}{% else
-        %}N/a{% endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Number of Pages:</strong> {% if chap %}{{ chap.pages }}{% else
-        %}N/a{% endif %}
-      </p>
-    </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Chapter Number:</strong> {% if chap %}{{ chap.chapter_number
-        }}{% else %}N/a{% endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Last Updated At:</strong> {% if chap %}{{ chap.updated_at }}{%
-        else %}N/a{% endif %}
-      </p>
-    </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if chap %}{{ chap.created_at }}{% else
-        %}N/a{% endif %}
-      </p>
+    <div class="form-inline my-2 my-lg-0">
+      <div class="d-flex">
+        <button
+          type="button"
+          class="btn btn-primary mr-3"
+          data-toggle="modal"
+          data-target="#exampleModalScrollable"
+        >
+          View Chapter
+        </button>
+      </div>
+      <div class="d-flex mt-2 mt-sm-0 justify-content-between">
+        <input
+          class="form-control mr-2"
+          type="search"
+          id="quizInput"
+          placeholder="Search by Quiz Name"
+          aria-label="Search"
+        />
+        <button
+          onclick="searchByChapter('{{skip}}', '{{take}}')"
+          class="btn btn-dark"
+        >
+          <a>Search</a>
+        </button>
+      </div>
     </div>
   </div>
+  <!-- flash message -->
+  {% with messages = get_flashed_messages(with_categories=True) %}{% if messages
+  %}
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-sm-6">
+        {% for category, message in messages %}
+        <div
+          class="alert alert-{{ category }} alert-dismissible fade show"
+          role="alert"
+        >
+          {{ message }}
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  {% endif %}{% endwith %}
 </section>
 {% endblock %}
