--- a/templates/admin/admin_single_subject.html
+++ b/templates/admin/admin_single_subject.html
@@ -12,59 +12,109 @@ content %}{% include "admin/admin_wrapper.html" %}
       </li>
     </ol>
   </nav>
-  <div class="border p-3">
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Subject Name:</strong> {% if sub %}{{ sub.name }}{% else %}N/a{%
-        endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Subject Description:</strong> {% if sub %}{{ sub.description
-        }}{% else %}N/a{% endif %}
-      </p>
-    </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Subject Code:</strong> {% if sub %}{{ sub.code }}{% else %}N/a{%
-        endif %}
-      </p>
-      <p class="col-12 col-sm-6">
-        <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at }}{%
-        else %}N/a{% endif %}
-      </p>
-    </div>
-    <div class="row">
-      <p class="col-12 col-sm-6">
-        <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{% else
-        %}N/a{% endif %}
-      </p>
+
+  <div
+    class="modal fade"
+    id="exampleModalScrollable"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalScrollableTitle"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-scrollable" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalScrollableTitle">
+            Subject Details
+          </h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="p-3">
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Subject Name:</strong> {% if sub %}{{ sub.name }}{% else
+                %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Subject Description:</strong> {% if sub %}{{
+                sub.description }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Subject Code:</strong> {% if sub %}{{ sub.code }}{% else
+                %}N/a{% endif %}
+              </p>
+              <p class="col-12 col-sm-6">
+                <strong>Last Updated At:</strong> {% if sub %}{{ sub.updated_at
+                }}{% else %}N/a{% endif %}
+              </p>
+            </div>
+            <div class="row">
+              <p class="col-12 col-sm-6">
+                <strong>Created At:</strong> {% if sub %}{{ sub.created_at }}{%
+                else %}N/a{% endif %}
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
   <div class="d-flex mt-3 flex-wrap justify-content-between">
-    <h3>Chapter Management</h3>
+    <div>
+      <h3>Chapter Management</h3>
+      <div class="d-flex align-items-center">
+        <p class="mr-4">Total Rows: {{ total_rows }}</p>
+        <p>
+          Current Page: {% if skip and take %} {{ ((skip|int)//take)+1 }} {%
+          else %}1{% endif %}
+        </p>
+      </div>
+    </div>
     <div class="form-inline my-2 my-lg-0">
-      <button type="button" class="btn btn-primary mr-3">
-        <a
-          class="text-white"
-          href="/admin/subject/chapter/new?sub_id={{ sub.id }}"
+      <div class="d-flex">
+        <button
+          type="button"
+          class="btn btn-primary mr-3"
+          data-toggle="modal"
+          data-target="#exampleModalScrollable"
         >
-          Add New Chapter
-          <span aria-hidden="true">&plus;</span>
-        </a>
-      </button>
-      <input
-        class="form-control mt-2 mt-sm-0 mr-sm-2"
-        type="search"
-        id="chapterInput"
-        placeholder="Search by Chapter Name"
-        aria-label="Search"
-      />
-      <button
-        onclick="searchByChapter('{{skip}}', '{{take}}')"
-        class="btn btn-dark my-2 my-sm-0"
-      >
-        <a>Search</a>
-      </button>
+          View Subject
+        </button>
+        <button type="button" class="btn btn-primary mr-3">
+          <a
+            class="text-white"
+            href="/admin/subject/chapter/new?sub_id={{ sub.id }}"
+          >
+            New Chapter
+          </a>
+        </button>
+      </div>
+      <div class="d-flex mt-2 mt-sm-0 justify-content-between">
+        <input
+          class="form-control mr-2"
+          type="search"
+          id="chapterInput"
+          placeholder="Search by Chapter Name"
+          aria-label="Search"
+        />
+        <button
+          onclick="searchByChapter('{{skip}}', '{{take}}')"
+          class="btn btn-dark"
+        >
+          <a>Search</a>
+        </button>
+      </div>
     </div>
   </div>
   <!-- flash message -->
@@ -172,13 +222,6 @@ content %}{% include "admin/admin_wrapper.html" %}
           </li>
         </ul>
       </nav>
-      <div class="d-flex align-items-center">
-        <p class="mr-4">Total Rows: {{ total_rows }}</p>
-        <p>
-          Current Page: {% if skip and take %} {{ ((skip|int)//take)+1 }} {%
-          else %}1{% endif %}
-        </p>
-      </div>
     </div>
   </section>
 </section>
