--- a/templates/admin/admin_single_chapter.html
+++ b/templates/admin/admin_single_chapter.html
@@ -200,7 +200,10 @@ content %}{% include "admin/admin_wrapper.html" %}
           <tr class="pointer">
             <th scope="row">{{ loop.index+skip }}</th>
             <td class="link">
-              <a>{{ quiz.chapter_code }}</a>
+              <a
+                href="/admin/subject/chapter/quiz/view?quiz_id={{ quiz.id }}&sub_id={{ sub.id }}&chap_id={{ chap.id }}"
+                >{{ quiz.chapter_code }}</a
+              >
             </td>
             <td>{{ quiz.date_of_quiz }}</td>
             <td>{{ quiz.time_duration }}</td>
