wip quiz stuffs

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,11 @@
     <title>{% block title %}Default Title{% endblock %}</title>
     <!-- custom css -->
     <link rel="stylesheet" href="/static/css/style.css" />
-
+    <link
+      rel="shortcut icon"
+      href="/static/images/logo.png"
+      type="image/x-icon"
+    />
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
