--- a/templates/admin/admin_single_chapter.html
+++ b/templates/admin/admin_single_chapter.html
@@ -128,7 +128,13 @@ content %}{% include "admin/admin_wrapper.html" %}
     </div>
     <div class="form-inline my-2 my-lg-0">
       <div class="d-flex">
-        <button type="button" class="btn btn-primary mr-3">New Quiz</button>
+        <button type="button" class="btn btn-primary mr-3">
+          <a
+            class="text-white"
+            href="/admin/subject/chapter/quiz/new?sub_id={{ sub.id }}&chap_id={{ chap.id }}"
+            >New Quiz</a
+          >
+        </button>
         <button
           type="button"
           class="btn btn-primary mr-3"
@@ -169,10 +175,12 @@ content %}{% include "admin/admin_wrapper.html" %}
           {{ message }}
           <button
             type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
+            class="close"
+            data-dismiss="alert"
             aria-label="Close"
-          ></button>
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         {% endfor %}
       </div>
@@ -216,7 +224,11 @@ content %}{% include "admin/admin_wrapper.html" %}
             <td>{{ quiz.created_at }}</td>
             <td>{{ quiz.updated_at }}</td>
             <td>
-              <button type="button" class="btn btn-secondary mr-3 mb-3">
+              <button
+                onclick="window.location.href='/admin/subject/chapter/quiz/update?quiz_id={{ quiz.id }}&chap_id={{ chap.id }}&sub_id={{ sub.id }}'"
+                type="button"
+                class="btn btn-secondary mr-3 mb-3"
+              >
                 Update
               </button>
               <form
