wip quiz stuffs

--- a/templates/admin/admin_single_subject.html
+++ b/templates/admin/admin_single_subject.html
@@ -131,10 +131,12 @@ content %}{% include "admin/admin_wrapper.html" %}
           {{ message }}
           <button
             type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
+            class="close"
+            data-dismiss="alert"
             aria-label="Close"
-          ></button>
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         {% endfor %}
       </div>
