wip quiz stuffs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,10 @@
   text-decoration: underline !important;
 }
 
+.required {
+  color: red;
+}
+
 .link {
   text-decoration: underline !important;
 }
