--- a/templates/admin/admin_wrapper.html
+++ b/templates/admin/admin_wrapper.html
@@ -23,11 +23,8 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="anchor nav-link" href="/admin/quiz">Quizzes</a>
-      </li>
-      <li class="nav-item">
         <a class="anchor nav-link" href="/admin/subject?skip=0&take=25"
-          >Subjects</a
+          >My Subjects</a
         >
       </li>
 
